# Cars_app

./: LICENSE.md  README.md  package-lock.json
backend/: .prettierrc  package-lock.json  package.json  tsconfig.json
backend/Json/: test.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/Interceptors/: remove-password.interceptor.ts
backend/src/auth/: a  auth.controller.ts  auth.entity.ts  auth.module.ts  auth.service.ts
backend/src/brand/: brand.controller.ts  brand.module.ts  brand.service.ts
backend/src/cars/: cars.controller.ts  cars.module.ts  cars.service.ts
backend/src/categories/: categories.controller.ts  categories.service.ts
backend/src/config/: jwt.config.ts  validation.ts
backend/src/images/: images.controller.ts  images.module.ts  images.service.ts
backend/src/listings/: listings.controller.spec.ts  listings.controller.ts  listings.module.ts  listings.service.spec.ts  listings.service.ts
backend/src/messages/: messages.controller.ts  messages.service.ts
backend/src/prisma/: prisma.module.ts  prisma.service.ts
backend/src/profile/: profile.controller.ts  profile.service.ts
backend/src/users/: users.module.ts  users.service.ts
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: auth.ts  globals.css  layout.tsx  page.tsx
frontend/app/Research/: page.tsx
frontend/app/action/: CreateCarAction.ts  actions.ts  auth.ts  (+1 more)
frontend/components/: Aurora.tsx
rust/: main.rs
rust/search-service/: Cargo.toml
rust/search-service/src/: indexer.rs  schema.rs
(+102 files in other folders)
